# python-base-uv

./: app.py  notebook.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
