[project]
name = "python-base-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.8.1",
]

[tool.ruff]
target-version = "py312"
output-format = "github"

[tool.ruff.lint]
exclude = ["__pycache__"]
